--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -33,31 +33,35 @@ import CalendarClock from './icons/CalendarClock.astro';
         >
             <div id="hero-section" class="p-4 flex flex-col flex-shrink-0 rounded-lg">
                 <h1 class="text-xl xs:text-2xl sm:text-4xl font-bold leading-tight mb-4">
-                    So How Much Does A Water Heater Replacement Cost?
+                    How Much Does A Water Heater Replacement Cost in Grand Rapids?
                 </h1>
-                <p class=" text-xl xs:text-2xl sm:text-3xl font-bold leading-tight">
+                <p class=" text-xl xs:text-2xl sm:text-4xl font-semibold leading-tight">
                     Them: <span class="text-secondary">It depends...</span>
                 </p>
-                <p class="text-xl xs:text-2xl sm:text-3xl font-bold leading-tight mb-4">
+                <p class="text-xl xs:text-2xl sm:text-4xl font-semibold leading-tight mb-4">
                     Us: <span class="text-primary">Here’s your price.</span>
                 </p>
-                <p class="font-semibold xs:text-md sm:text-2xl leading-tight sm:max-w-2xl max-w-3xl mb-4 mx-auto ">
-                    Because fair pricing shouldn't be a secret.
-                </p>
-                <p class="sm:text-2xl leading-tight sm:max-w-2xl max-w-3xl mx-auto ">
-                    Skip the sales game.
-                </p>
-                <p class="xs:text-md sm:text-2xl leading-tight sm:max-w-xl max-w-3xl mx-auto">
-                    Get an instant quote.
-                </p>
-                <!-- <p class="xs:text-md sm:text-2xl leading-tight sm:max-w-xl max-w-3xl mb-4 mx-auto">
-                    Answers in minutes.
+                <!-- <p class="font-semibold xs:text-md sm:text-2xl leading-tight sm:max-w-2xl max-w-3xl mb-4 mx-auto ">
+                    Because fair pricing isn't a secret.
                 </p> -->
-
-                <p class="xs:text-md sm:text-2xl leading-tight sm:max-w-xl max-w-3xl mx-auto mb-6">
-                    Book online today.
+                <p class="font-semibold xs:text-md sm:text-2xl leading-tight sm:max-w-2xl max-w-3xl mx-auto ">
+                    Get a price in seconds.
                 </p>
-
+                <p class="font-semibold xs:text-md sm:text-2xl leading-tight sm:max-w-2xl max-w-3xl mb-4 mx-auto ">
+                    Schedule the job in minutes.
+                </p>
+                <p class="sm:text-2xl leading-tight sm:max-w-2xl max-w-3xl mx-auto mb-4">
+                    Fast • Fair • Hassle-Free
+                </p>
+                <!-- <p class="xs:text-md sm:text-2xl leading-tight sm:max-w-xl max-w-3xl mx-auto">
+                    Get an instant quote.
+                </p> -->
+                <!-- <p class="xs:text-md sm:text-2xl leading-tight sm:max-w-xl max-w-3xl mx-auto mb-6">
+                    Book online today.
+                </p> -->
+                <!-- <p class="xs:text-md sm:text-2xl leading-tight sm:max-w-xl max-w-3xl mx-auto mb-6">
+                    West Michigan's source for affordable, hassle-free water heaters.
+                </p> -->
                 <a href="/instant-quote/?step=1" class="btn btn-primary text-lg text-white py-2 w-64 max-w-xs mx-auto mb-4">
                     <PriceReceipt />
                     <p>Instant Quote</p>
@@ -66,6 +70,11 @@ import CalendarClock from './icons/CalendarClock.astro';
                     <Phone />
                     <p>Talk to a Pro</p>
                 </a>
+                <p class="text-sm text-gray-500 max-w-sm mx-auto">
+                    Locally owned and operated in West Michigan.
+                </p>
+
+
                 <!-- <a aria-label="Book Now" href="/pricing/" class="btn btn-outline text-lg bg-white/50 text-black py-2 w-64 max-w-xs mx-auto mb-4 shadow-sm">
                     <CalendarClock />
                     <p>Ready To Schedule?</p>
