lotsa small updates

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -45,13 +45,17 @@ import CalendarClock from './icons/CalendarClock.astro';
                     Because fair pricing isn't a secret.
                 </p> -->
                 <p class="font-semibold xs:text-md sm:text-2xl leading-tight sm:max-w-2xl max-w-3xl mx-auto ">
-                    Get a price in seconds.
+                    See prices in seconds.
                 </p>
-                <p class="font-semibold xs:text-md sm:text-2xl leading-tight sm:max-w-2xl max-w-3xl mb-4 mx-auto ">
+                <p class="font-semibold xs:text-md sm:text-2xl leading-tight sm:max-w-2xl max-w-3xl mx-auto ">
                     Schedule the job in minutes.
                 </p>
+                <p class="font-semibold xs:text-md sm:text-2xl leading-tight sm:max-w-2xl max-w-3xl mb-4 mx-auto ">
+                    Check it off your list.
+                </p>
+
                 <p class="sm:text-2xl leading-tight sm:max-w-2xl max-w-3xl mx-auto mb-4">
-                    Fast • Fair • Hassle-Free
+                    Fast • Fair • Locally Owned • Hassle-Free
                 </p>
                 <!-- <p class="xs:text-md sm:text-2xl leading-tight sm:max-w-xl max-w-3xl mx-auto">
                     Get an instant quote.
@@ -70,9 +74,9 @@ import CalendarClock from './icons/CalendarClock.astro';
                     <Phone />
                     <p>Talk to a Pro</p>
                 </a>
-                <p class="text-sm text-gray-500 max-w-sm mx-auto">
+                <!-- <p class="text-sm text-gray-500 max-w-sm mx-auto">
                     Locally owned and operated right here in West Michigan.
-                </p>
+                </p> -->
 
 
                 <!-- <a aria-label="Book Now" href="/pricing/" class="btn btn-outline text-lg bg-white/50 text-black py-2 w-64 max-w-xs mx-auto mb-4 shadow-sm">
