--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -27,7 +27,7 @@ const { showNavigation = true } = Astro.props;
                             <a aria-label="How It Works" href="/instant-quote/?step=1">Instant Quote</a>
                         </li>
                         <li>
-                            <a aria-label="pricing" href="/pricing/">Pricing</a>
+                            <a aria-label="pricing" href="/water-heater-pricing/">Water Heater Pricing</a>
                         </li>
                         <li>
                             <details id="desktop-products-menu">
@@ -77,7 +77,7 @@ const { showNavigation = true } = Astro.props;
                         <a aria-label="Why trust us" href="/#why-trust-us">Why Trust Us</a>
                     </li> */}
                     <li>
-                        <a aria-label="about" aria-disabled="true" href="/pricing/">Pricing</a>
+                        <a aria-label="about" aria-disabled="true" href="/water-heater-pricing/">Water Heater Pricing</a>
                     </li>
                     <li>
                         <p class="pointer-events-none" aria-label="parent">Products</p>
