--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,8 +13,9 @@
 			<h4 class="font-semibold mb-4">Pages</h4>
 			<ul class="space-y-2">
 				<li><a class="link link-hover" href="/">Home</a></li>
-				<li><a class="link link-hover" href="/#frustrated-with-the-process">Frustrated With the Process?</a></li>
-				<li><a class="link link-hover" href="/#how-we-do-it-differently">We Do It Differently</a></li>
+				<!-- <li><a class="link link-hover" href="/#frustrated-with-the-process">Frustrated With the Process?</a></li>
+				<li><a class="link link-hover" href="/#how-we-do-it-differently">We Do It Differently</a></li> -->
+				<li><a class="link link-hover" href="/pricing">Water Heater Pricing</a></li>
 				<li>
 					<p class="pointer-events-none" aria-label="parent">Products</p>
 					<ul class="p-2">
@@ -32,7 +33,6 @@
 						</li>
 					</ul>
 				</li>
-				<li><a class="link link-hover" href="/pricing">Pricing</a></li>
 			</ul>
 		</div>
 
