--- a/src/pages/how-to-stop-a-water-leak.astro
+++ b/src/pages/how-to-stop-a-water-leak.astro
@@ -77,5 +77,5 @@ import Cta from '../components/Cta.astro';
 			</a>
 		</div> -->
 	</section>
-	<Cta title="Need That Leak Fixed?" />
+	<Cta title="Need That Water Heater Replaced?" />
 </BaseLayout>
