--- a/src/components/Faq.astro
+++ b/src/components/Faq.astro
@@ -59,7 +59,7 @@ const faqs = [
 	},
 	{
 		question: "Can I upgrade to a tankless system?",
-		answer: `Yes, you can absolutely upgrade to a tankless systems. Keep in mind not every home is ready for one simply by removing your old water heater — they often require gas line upgrades, additional venting, and an outlet installed nearby. We may even need to install a chimney liner if your old water heater shared a chiimney with your furnace or boiler. Each of these factors affects the installation cost.
+		answer: `Yes, you can absolutely upgrade to a tankless systems. Keep in mind not every home is ready for one simply by removing your old water heater — they often require gas line upgrades, additional venting, and an outlet installed nearby. We may even need to install a chimney liner if your old water heater shared a chimney with your furnace or boiler. Each of these factors affects the installation cost.
 			<br/><br/>
 			While we try to give as rigid of a price range as possible with our <a href="/instant-quote/?step=1" class="text-primary font-bold">instant quote tool</a>, upgrading from a tank to tankless has the most 'unknowns' to verify. We’ll confirm the exact price on-site before starting work.`
 	},
