Update hero, add pricing. text updates

--- a/src/components/Faq.astro
+++ b/src/components/Faq.astro
@@ -7,11 +7,11 @@ const faqs = [
 			“<span class="font-semibold">Cheap now, expensive later</span>” vs. “<span class="font-semibold">Expensive now, cheap later</span>”.
 			<br/><br/>
 			A basic tank-style water heater is cheaper upfront but will cost you more over time in energy bills and has a shorter lifespan.
-			On the other hand, a high-efficiency tankless system costs more to install but saves you money every month and lasts up to 10 years longer.
+			On the other hand, a high-efficiency tankless system costs more to install but saves you money every month and can last over 10 years longer.
 			<br/><br/>
 
 			Get an <a href="/instant-quote/?step=1" class="text-primary font-bold">instant quote</a> to see the price range for both options based on your home setup and hot water needs.
-			We’ll help you compare both and give you a clear, all-in price before any work starts — no surprises.`
+			We’ll help you compare them and give you a clear, all-in price before any work starts — no surprises.`
 	},
 	{
 		question: "Do I really get a price without giving my email?",
@@ -23,11 +23,11 @@ const faqs = [
 	},
 	{
 		question: "What’s the difference between standard, power vent, hybrid, and tankless water heaters?",
-		answer: `A <span class="font-semibold">standard tank water heater</span> uses natural draft to vent exhaust through a chimney or metal flue—no fans, just the fact that heat rises. It’s the cheapest to install but the least efficient.
+		answer: `A <span class="font-semibold">standard tank water heater</span> vents its exhaust through a chimney or metal flue using a natural draft—no fans, just the fact that heat rises. It’s the cheapest to install but the least efficient.
 			<br/><br/>
-			A <span class="font-semibold">power vent tank water heater</span> does the same job but uses a fan to push exhaust through plastic pipe. It's slightly more efficient but much more flexible for installation location since it vents with pvc. They cost more upfront and require an outlet nearby (to power the exhaust fan).
+			A <span class="font-semibold">power vent tank water heater</span> does the same job but uses a fan to push exhaust out of the home through a PVC pipe. It's slightly more efficient but much more flexible for installation location since it vents with pvc. They cost more upfront than natural draft water heaters and require a standard outlet nearby (to power the exhaust fan).
 			<br/><br/>
-			A<span class="font-semibold"> hybrid (heat pump) water heater</span> uses a refrigerant circuit and compressor to pull heat from the surrounding air and transfer it into the water tank (similar to your ac system, but instead of an outdoor unit with a fan blowing away the heat, it captured the heat in a water tank). They are extremely efficient in the right scenario but households with high hot water needs (think several showers in a row) will regularly cause its backup electric heater to kick in, zapping much of the savings away.
+			A<span class="font-semibold"> hybrid (heat pump) water heater</span> uses a refrigerant circuit and compressor to pull heat from the surrounding air and transfer it into the water tank. This is similar to an AC system but instead of an outdoor unit with a fan blowing away the heat, it captures the heat in a water tank. Hybrid water heaters are extremely efficient in the right scenario but households in cold winter climates (like Michigan) or with high hot water needs - think several showers in a row - will regularly cause its backup electric heater to kick in, zapping all the savings away.
 			<br/><br/>
 			<span class="font-semibold">Tankless or on-demand water heaters</span> don’t store hot water, they heat it right when you use it. You save space, energy, and never “run out” of hot water even with every faucet open, laundry running, and steamy shower flowing. But you’ll pay more upfront and may need to upgrade your gas line and install an outlet nearby to support it.`
 	},
@@ -39,23 +39,23 @@ const faqs = [
 	},
 	{
 		question: "How do I know if I need a new water heater?",
-		answer: `Most tank water heaters last 8–12'ish years. Signs you may need a replacement include inconsistent hot water, strange noises, water around the base, rusty water, or increasing energy bills. If your unit is over 10 years old and showing these signs, it's usually more cost-effective to replace it.`
+		answer: `Most tank water heaters last around 10–12 years. Signs you may need a replacement include inconsistent hot water, strange noises, water around the base, rusty water, or increasing energy bills. If your unit is over 10 years old and showing these signs, it's usually most cost-effective to replace it.`
 	},
 	{
 		question: "Can you replace my water heater the same day?",
-		answer: `In many cases, yes. If you call early in the day and we have access to the unit size/type you need, we can replace it same-day. We also offer next-day guaranteed appointments.`
+		answer: `In many cases, yes. If you call early in the day and we have access to the unit size/type you need, we can replace it same-day. We also offer next-day appointments.`
 	},
 	{
 		question: "What if I’m not sure what type of water heater I have now?",
-		answer: `No problem — just answer a few simple questions (or send a photo), and we’ll identify your current setup. From there, we’ll match you with the most compatible replacement or help you explore upgrade options if desired.`
+		answer: `No problem — just answer a few simple questions (or send a photo), and we’ll identify your current setup. From there, we’ll match you with the most compatible replacement or help you explore high efficiency options if desired.`
 	},
 	{
 		question: "Do I need a permit to replace my water heater in Michigan?",
-		answer: `Yes — in most municipalities, a plumbing/mechanical permit is required. We handle the permitting process and make sure your install is up to code so you don’t have to worry.`
+		answer: `Yes — in most municipalities, a plumbing/mechanical permit is required. We handle the permitting process and make sure your install is up to code so you don’t have to worry. An inspector may schedule an inspection after the install to verify everything is safe and code compliant.`
 	},
 	{
 		question: "Do you service both gas and electric water heaters?",
-		answer: `Yes. We install and replace both gas and electric units, including tank, tankless, and hybrid models. We’ll confirm your home's fuel type during the quote process to ensure you get the right model.`
+		answer: `Yes. We install and replace both gas and electric water heaters, including tank, tankless, and hybrid models. We’ll confirm your home's fuel type during the quote process to ensure you get the right model. Need to switch from gas to electric or vice versa? We can help with that too, but keep in mind it may require additional work like electrical upgrades or gas line installation, which will affect the overall cost.`
 	},
 	{
 		question: "Can I upgrade to a tankless system?",
@@ -69,17 +69,17 @@ const faqs = [
 	},
 	{
 		question: "Will I be without hot water during the install?",
-		answer: `Yes, but only briefly. We’ll disconnect your old unit and install the new one the same day in most cases, meaning hot water is typically restored within a few hours of arrival.`
+		answer: `Yes, but only briefly. We’ll disconnect your old unit and install the new one the same day. Hot water is typically restored within a few hours of arrival so you can move on with your day (after a hot shower, of couse).`
 	},
 	{
 		question: "Do you dispose of the old water heater?",
-		answer: `Yes. Unless you'd like to keep it as a memento, we always remove and dispose of your old water heater with every replacement.`
+		answer: `Yes. Unless you'd like to keep it as a memento, we always remove and dispose of your old water heater and clean up the area after every replacement. You won't even know we were there...well, it might actually be cleaner than it was.`
 	},
 	{
 		question: "Is the work guaranteed?",
 		answer: `Yes — every job includes a minimum <span class="font-bold">1-Year Labor Warranty</span>, a <span class="font-bold">Manufacturer Warranty</span>, and a <span class="font-bold">Satisfaction Guarantee</span>. We install everything up to Michigan code requirements so you won’t have issues during home sales, inspections, or insurance claims.
 			<br/><br/>
-			Most tanks include a 6-12 year manufacturer warranty. Tankless units include a 10-12 year heat exchanger warranty and 5 year parts warranty.`
+			Most tanks include a 6-12 year manufacturer warranty. Tankless units include a 10-12 year heat exchanger warranty and 5 year parts warranty. Extended labor and equipment warranties are also available starting at $295.`
 	}
 ];
 ---
