update hero section

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -36,20 +36,20 @@ import CalendarClock from './icons/CalendarClock.astro';
                     How Much Does A Water Heater Replacement Cost in Grand Rapids?
                 </h1>
                 <p class=" text-xl xs:text-2xl sm:text-4xl font-semibold leading-tight">
-                    Them: <span class="italic">"It depends..."</span>
+                    Them: <span class="text-secondary font-medium italic">We'll send a salesman...</span>
                 </p>
                 <p class="text-xl xs:text-2xl sm:text-4xl font-semibold leading-tight mb-4">
-                    Us: <span class="text-secondary">"Here’s your price—installed."</span>
+                    Us: <span class="text-primary font-bold">Here’s your installed price.</span>
                 </p>
                 <p class="text-xl xs:text-2xl sm:text-4xl font-semibold leading-tight">
-                    <span class="text-primary">Tanks: $1,495-$2,750</span>
+                    <span class="">Tanks: from $1,495-$2,750</span>
                 </p>
                 <p class="text-xl xs:text-2xl sm:text-4xl font-semibold leading-tight mb-4">
-                    <span class="text-primary">Tankless: $3,250-$4,500</span>
+                    <span class="">Tankless: from $3,250-$4,500</span>
                 </p>
 
                 <p class="font-semibold xs:text-md sm:text-2xl leading-tight sm:max-w-2xl max-w-3xl mb-4 mx-auto ">
-                    Get your all-inclusive price in seconds and book a hassle-free installation in minutes with our Instant Quote tool.
+                    Get your custom price in seconds and book a hassle-free installation in minutes with our Instant Quote tool.
                 </p>
                 <!-- <p class="font-semibold xs:text-md sm:text-2xl leading-tight sm:max-w-2xl max-w-3xl mb-4 mx-auto ">
                     Book a hassle-free water heater installation in minutes.
