hero text update

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -56,7 +56,8 @@ import CalendarClock from './icons/CalendarClock.astro';
                 </p> -->
 
                 <p class="sm:text-2xl leading-tight sm:max-w-2xl max-w-3xl mx-auto mb-6">
-                    Fast • Fair • Locally Owned
+                    <!-- Fast • Fair • Locally Owned -->
+                    Fast • Fair • No Commissions • No Hassle
                 </p>
                 <a href="/instant-quote/?step=1" class="btn btn-primary text-lg text-white py-2 w-64 max-w-xs mx-auto mb-4">
                     <PriceReceipt />
