fix water heater recommendations

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -36,7 +36,7 @@ import CalendarClock from './icons/CalendarClock.astro';
                     How Much Does A Water Heater Replacement Cost in Grand Rapids?
                 </h1>
                 <p class=" text-xl xs:text-2xl sm:text-4xl font-semibold leading-tight">
-                    Them: <span class="text-secondary font-medium italic">We'll send a salesman...</span>
+                    Them: <span class="text-secondary font-medium italic">High-pressure sales...</span>
                 </p>
                 <p class="text-xl xs:text-2xl sm:text-4xl font-semibold leading-tight mb-4">
                     Us: <span class="text-primary font-bold">Here’s your installed price.</span>
@@ -49,7 +49,7 @@ import CalendarClock from './icons/CalendarClock.astro';
                 </p>
 
                 <p class="font-semibold xs:text-md sm:text-2xl leading-tight sm:max-w-2xl max-w-3xl mb-4 mx-auto ">
-                    Get your custom price in seconds and book a hassle-free installation in minutes with our Instant Quote tool.
+                    Get your all-inclusive price in seconds. Book your guaranteed installation date in minutes.
                 </p>
                 <!-- <p class="font-semibold xs:text-md sm:text-2xl leading-tight sm:max-w-2xl max-w-3xl mb-4 mx-auto ">
                     Book a hassle-free water heater installation in minutes.
