update FAQ wording

--- a/src/components/Faq.astro
+++ b/src/components/Faq.astro
@@ -17,19 +17,19 @@ const faqs = [
 		question: "Do I really get a price without giving my email?",
 		answer: `Yes. You’re not a lead. You’re a person looking for hot water and we’re not here to trap you in a sales funnel. Besides, there are only so many ways to heat water.
 			<br/><br/>
-			Our <a href="/instant-quote/?step=1" class="text-primary font-bold">instant price quote quiz</a> will give you an accurate price range based on your answers, and you can decide if and when it works for you. No strings attached.
+			Our <a href="/instant-quote/?step=1" class="text-primary font-bold">Instant Quote tool</a> will give you an accurate price range based on your answers, and you can decide if and when it works for you. No strings attached.
 			<br/><br/>
-			We're always here to help if you have questions or need more details.`
+			We're always here to help if you have questions or need more details, just give us a call.`
 	},
 	{
 		question: "What’s the difference between standard, power vent, hybrid, and tankless water heaters?",
-		answer: `A <span class="font-semibold">standard tank water heater</span> vents its exhaust through a chimney or metal flue using a natural draft—no fans, just the fact that heat rises. It’s the cheapest to install but the least efficient.
+		answer: `A <span class="font-semibold">standard tank water heater</span> uses either electric or gas to heat the water. The gas version vents the exhaust through a chimney or metal flue using a natural draft—no fans, just the fact that heat rises. The electric version has no venting needs but rather heats an electric element inside the tank (like a toaster) and costs more to operate.  These are typically the cheapest to install but the least efficient and cost the most to operate long-term.
 			<br/><br/>
-			A <span class="font-semibold">power vent tank water heater</span> does the same job but uses a fan to push exhaust out of the home through a PVC pipe. It's slightly more efficient but much more flexible for installation location since it vents with pvc. They cost more upfront than natural draft water heaters and require a standard outlet nearby (to power the exhaust fan).
+			A <span class="font-semibold">power vent tank water heater</span> does the same job but uses a fan to push exhaust out of the home through a PVC pipe. It's slightly more efficient but much more flexible for installation location since it vents with pvc. They cost more upfront than natural draft water heaters and require a standard outlet nearby (to power the exhaust fan), but offer mediocre savings compared to the standard natural draft gas water heater tanks.
 			<br/><br/>
 			A<span class="font-semibold"> hybrid (heat pump) water heater</span> uses a refrigerant circuit and compressor to pull heat from the surrounding air and transfer it into the water tank. This is similar to an AC system but instead of an outdoor unit with a fan blowing away the heat, it captures the heat in a water tank. Hybrid water heaters are extremely efficient in the right scenario but households in cold winter climates (like Michigan) or with high hot water needs - think several showers in a row - will regularly cause its backup electric heater to kick in, zapping all the savings away.
 			<br/><br/>
-			<span class="font-semibold">Tankless or on-demand water heaters</span> don’t store hot water, they heat it right when you use it. You save space, energy, and never “run out” of hot water even with every faucet open, laundry running, and steamy shower flowing. But you’ll pay more upfront and may need to upgrade your gas line and install an outlet nearby to support it.`
+			<span class="font-semibold">Tankless or on-demand water heaters</span> don’t store hot water, they heat it right when you use it. You save space, energy, and never “run out” of hot water even with every faucet open, laundry running, and steamy shower flowing. But you’ll pay more upfront and may need to upgrade your gas line and install an outlet nearby to support it. But in the long run, they’re the most efficient and longest-lasting option available. They do require regular maintenance of flushing/descaling the heat exchanger with viniger or other solutions, but this is fairly simple to do yourself or hire out at a moderate cost. Some claim the money tankless water heaters save is eaten up by people taking longer showers, but we find most people just enjoy the endless hot water and extra floorspace and aren't planning to use the energy savings to fund their retirement.`
 	},
 	{
 		question: "Why do I need a photo or video call to narrow down my price range?",
