--- a/src/components/WhyChooseUs.astro
+++ b/src/components/WhyChooseUs.astro
@@ -14,7 +14,7 @@ import Avatar from "./icons/Avatar.astro"
 			</div>
 			<div>
 				<h3 class="font-bold text-lg mb-2">Flat-Rate Pricing</h3>
-				<p>Clear pricing with fast and affordable replacements. No salesman. No pressure. No surprise fees.</p>
+				<p>Clear pricing with fast and affordable replacements. No salesman. No commissions. No pressure. No surprise fees.</p>
 			</div>
 			<div>
 				<h3 class="font-bold text-lg mb-2">Reliable & Respectful</h3>
